--- a/Pharmacy/requirements.txt
+++ b/Pharmacy/requirements.txt
@@ -36,4 +36,9 @@ typing_extensions==4.12.2
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
+Flask
+Flask-Mail
+Flask-WTF
+Flask-Bcrypt
+Flask-Login
 gunicorn
